# lab4-threads-1

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/include/: mainwindow.h  mainwindow.h.autosave  mypoint.h  myrunnable.h  pointswidget.h  worker.h  workerslauncher.h
app/src/: mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.ui  mypoint.cpp  myrunnable.cpp  pointswidget.cpp  worker.cpp  workerslauncher.cpp
tests/: CMakeLists.txt  test_mainwindow.cpp  test_mypoint.cpp  test_myrunnable.cpp  test_pointswidget.cpp  test_workerslauncher.cpp
